styles.css
/* ... */
.modtype_hsuforum .no-overflow,
.modtype_hsuforum.activity:after,
.format-flexpage  .block_flexpagemod_hsuforum li.activity:after {
    clear: both;
}

.discussnavigation {
    width: auto;
}

.discussnavigation:after{
    content: '';
    clear: both;
    line-height: 1px;
}

.discussnavigation .navigateprevious, .discussnavigation .navigatenext {
    width: 50%;
}

.discussnavigation .navigateprevious div:first-child, .discussnavigation .navigatenext div:first-child{
    font-variant: small-caps;
}

.discussnavigation .navigateprevious {
    text-align: left;
    float: left;
}

.discussnavigation .navigatenext {
    text-align: right;
    float: right;
}

.hsuforum-threshold-blocked .hsuforum-post-figure,
.hsuforum-threshold-blocked .hsuforum-post-body {
    display: none;
}

.format-flexpage .block_flexpagemod_hsuforum li.activity:before,
.format-flexpage .block_flexpagemod_hsuforum li.activity:after,
.modtype_hsuforum.activity:before,
.modtype_hsuforum.activity:after,
.modtype_hsuforum.activity .unread:before {
    content: "";
    display: table;
    clear: both;
}

.path-mod-hsuforum .discussioncontrols .managesubslink {
    float: left;
}

.path-mod-hsuforum #id_displayperiod {
    margin-bottom: 1em;
}

#discussion_dateform {
    display: none;
}

.dateformtarget {
    margin-bottom: 1em;
}

.timedpost.smallicon {
    vertical-align: top;
    height: 1em;
    margin-top: 0.1em;
}

.path-mod-hsuforum .hsuforum-post-target:target {
    -webkit-animation: target-fade 3s 1;
            animation: target-fade 3s 1;
}

@-webkit-keyframes target-fade {
    0% {
        background-color: rgba(0,0,0,.1);
    }
    100% {
        background-color: rgba(0,0,0,0);
    }
}

@keyframes target-fade {
    0% {
        background-color: rgba(0,0,0,.1);
    }
    100% {
        background-color: rgba(0,0,0,0);
    }
}

.path-mod-hsuforum .advancedoptions label {
    text-align: right;
}

.path-mod-hsuforum .advancedoptions label input {
    margin-right: 0;
}

